# jabcoin

./: .gitignore  .rustfmt.toml  Cargo.toml  readme.md
jabcoin/: Cargo.toml
jabcoin/etc/mock/: address.json  block.json  block_large.json  transaction.json
jabcoin/etc/mock/network/: broadcast_block.json  broadcast_transaction.json
jabcoin/src/: core.rs  lib.rs  network.rs
jabcoin/src/core/: address.rs  block.rs  blockchain.rs  crypto.rs  mod.rs  transaction.rs
jabcoin/src/network/: mod.rs  node.rs  p2p.rs  protocol.rs
jabcoin/src/protocol/: address.rs  block.rs  blockchain.rs  mod.rs  transaction.rs
jabcoin/tests/: broadcast_block.rs  broadcast_nodes.rs  deregister_block.rs  register_block.rs  request_block.rs  request_nodes.rs
jabcoin/tests/common/: mod.rs
jabnode/: Cargo.toml
jabnode/src/: lib.rs  network.rs  node.rs  threadpool.rs  wallet.rs
jabnode/src/network/: connection.rs  node.rs  peer.rs
jabnode/src/node/: communication.rs
