[package]
name = "jabcoin"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rsa = { version = "0.6.1", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.2"
