[package]
name = "jabnode"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.2.2"
env_logger = "0.9.0"
jabcoin = { path = "../jabcoin" }
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
